--- a/src/app/agent-home/agent-home.component.html
+++ b/src/app/agent-home/agent-home.component.html
@@ -1,65 +1,18 @@
-<!-- <div>
-  <h1>Welcome, {{ userData.username }}</h1>
-  <p>Email: {{ userData.email }}</p>
-</div> -->
+<app-header></app-header>
 
-<div class="navbar">
-  <h1>Agent's DashBoard</h1>
-  <div class="logo">
-    <h1>Welcome, {{ userData.username }}</h1>
-    <p>Email: {{ userData.email }}</p>
-  </div>
-  <div>
-    <!-- <div *ngIf="Islogging; else notLoggedIn">
-      <div class="user-info">
-        <i class="fas fa-user-circle fa-2x"></i>
-        <h2>{{ userData.username }}</h2>
-        <button (click)="logout()" class="btn">Logout</button>
-      </div>
-    </div>
-
-    <ng-template #notLoggedIn>
-      <div class="agent-buttons" *ngIf="!Islogging">
-        <button routerLink="/signup" class="btn">Agent Signup</button>
-        <button routerLink="/login" class="btn">Agent Login</button>
-      </div>
-    </ng-template> -->
-  </div>
-
-  <div class="dashboard">
-    <div class="button-container">
-      <!-- <button
-        class="dashboard-button"
-        *ngIf="isAgent()"
-        (click)="showUserList()"
-      >
-        <img
-          src="https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/sms-color-1920w.png"
-          alt=""
-          id="1952073423"
-          class="button-icon"
-          data-dm-image-path="https://irp.cdn-website.com/519d3ac1/dms3rep/multi/sms-color.png"
-          onerror="handleImageLoadError(this)"
-          style="object-fit: cover; width: 100%; height: 100%"
-        />
-        <i class="fas fa-users button-icon"></i>
-        <span class="button-text">User List</span>
-      </button> -->
-
-      <button class="dashboard-button" (click)="startChat()">
-        <button class="dashboard-button" (click)="startChat()">
-          <img
-            src="https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/chat-color-1920w.png"
-            alt=""
-            id="1014756893"
-            class="button-icon"
-            data-dm-image-path="https://irp.cdn-website.com/519d3ac1/dms3rep/multi/chat-color.png"
-            onerror="handleImageLoadError(this)"
-            style="object-fit: cover; width: 100%; height: 100%"
-          />
-          <span class="button-text">Chat</span>
-        </button>
-      </button>
-    </div>
+<div class="dashboard" *ngIf="Islogging">
+  <div class="button-container">
+    <button class="dashboard-button" (click)="startChat()">
+      <img
+        src="https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/chat-color-1920w.png"
+        alt=""
+        id="1014756893"
+        class="button-icon"
+        data-dm-image-path="https://irp.cdn-website.com/519d3ac1/dms3rep/multi/chat-color.png"
+        onerror="handleImageLoadError(this)"
+        style="object-fit: cover; width: 100%; height: 100%"
+      />
+      <span class="button-text">Chat</span>
+    </button>
   </div>
 </div>
