--- a/src/app/user-dashboard/user-dashboard.component.css
+++ b/src/app/user-dashboard/user-dashboard.component.css
@@ -17,42 +17,34 @@ body {
 }
 
 /* --------------------------------- */
+
 .header {
   position: relative;
   height: 95vh;
-  background-image: url("https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/home-hero2-1920w.png");
-  background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-  height: 100vh;
-  color: #fff;
-}
-.header {
-  position: relative;
-  height: 95vh;
-  background-image: url("../../assets/img/header-image.jpg"),
+  background-image: url("https://lirp.cdn-website.com/519d3ac1/dms3rep/multi/opt/home-hero2-1920w.png"),
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 90vh;
+  height: 85vh;
   color: #fff;
 }
 
 .header-btn {
   position: absolute;
   top: 84%;
-  left: 85%;
+  left: 90%;
   transform: translate(-30%, -30%);
   text-align: center;
-  width: 20%;
+  width: 13%;
   padding: 0.8em;
   border-radius: 12px;
   cursor: pointer;
   font-size: 1.2em;
   font-weight: 600;
-  color: #fff;
-  background: linear-gradient(rgba(70, 70, 70, 0.2), rgba(53, 53, 53, 0.2));
+  color: rgb(246, 96, 58);
+  border: none;
+  background-color: #fff;
 }
 
 .chat-container {
@@ -63,7 +55,7 @@ body {
   transform: translate(-30%, 0);
   text-align: center;
   width: 30%;
-  height: 90vh;
+  height: 79vh;
   background: #fff;
   border-top: 1px solid #ccc;
 }
@@ -77,16 +69,18 @@ body {
 }
 .user-message {
   text-align: right;
-  background-color: #007bff; /* Your message background color */
+  background-color: rgb(241, 125, 96);
   color: #fff;
   padding: 5px;
   margin: 5px;
+  width: 50%;
   border-radius: 5px;
+  display: right;
 }
 
 .other-message {
   text-align: left;
-  background-color: #f0f0f0; /* Other message background color */
+  background-color: #f0f0f0;
   color: #000;
   padding: 5px;
   margin: 5px;
@@ -105,12 +99,13 @@ body {
 }
 
 .input button {
-  background: #007bff; /* Adjust the button color */
-  color: #fff;
+  background: rgb(246, 96, 58);
   border: none;
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: 500;
+  color: #fff;
 }
 
 .header-btn.ng-hide {
@@ -185,6 +180,15 @@ body {
   display: unset;
 }
 /* --------------------------------------------- */
+/* Remove the vertical scroll bar */
+.your-element {
+  overflow-y: hidden;
+}
+
+/* Remove the horizontal scroll bar */
+.your-element {
+  overflow-x: hidden;
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -229,7 +233,7 @@ body {
   font-size: 1em;
   border-radius: 3px;
   border: none;
-  background-color: rgb(7, 116, 7);
+  background-color: rgb(246, 96, 58);
   width: 70%;
   color: #fff;
 }
