--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -21,9 +21,9 @@
     </button>
     <div class="chat-container" *ngIf="showChatContainer">
       <div class="chat-header">
-        <h2>Chat Header</h2>
+        <h3 style="text-align: right">Alive5</h3>
         <button (click)="closeChatContainer()" class="close-button">
-          Close
+          <i class="fas fa-close" style="color: #fff"></i>
         </button>
       </div>
       <div class="messages">
@@ -34,7 +34,7 @@
               'other-message': message.sender !== 'user'
             }"
           >
-            {{ message.type }}
+            <b>{{ message.agentName }}</b>
             {{ message.text }}
           </div>
         </div>
